# postgres-db-interaction

./: Makefile  README.md  pyproject.toml
.github/workflows/: app.yml
docker/: .env_template  docker-compose.yml
src/homework/: clear_tables.py  main.py
